--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
 # Note: If you are using Azure App Service, go to your app's Configuration,
 # and then set the following values into your app's "Application settings".
 
-CLIENT_ID=<client id>
-CLIENT_SECRET=<client secret>
+CLIENT_ID=84501830-f37a-41b0-a307-2703c3682981
+CLIENT_SECRET=GX68Q~eYolB45QtNMoqbdjCtUi2Mpy0dJaVhCa4f
 
 # Expects a full tenant id such as "contoso.onmicrosoft.com", or its GUID
 # Or leave it undefined if you are building a multi-tenant app
